changed lift/retract button

--- a/.gitignore
+++ b/.gitignore
@@ -749,3 +749,18 @@ hs_err_pid*
 /bin/
 /bin/
 /bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
