fine tuned code at duluth regional

--- a/.gitignore
+++ b/.gitignore
@@ -764,3 +764,19 @@ hs_err_pid*
 /bin/
 /bin/
 /bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
